--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -3,7 +3,7 @@
 one:
   name: Austin Czarnecki
   address: MyText
-  email: austin@me.com
+  email: austin.czarnecki@gmail.com
   pay_type: Check
 
 two:
